# physarum-simulation

./: .gitignore  CMakeLists.txt  README.md  physarum_sim.cpp  physarum_sim.cpp~
eigen-3.4.0/: INSTALL
